# markdown_webscraper

./: LICENSE  README.md  config.json  pyproject.toml  pytest.ini  requirements.txt  scrape.py
markdown_webscraper/: __init__.py  cli.py  config.py  fetcher.py  html_utils.py  pipeline.py
tests/integration/: test_live_scrape.py
tests/unit/: test_config.py  test_html_utils.py  test_pipeline.py
